Add POST /todos route and refractor mongoose

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Ankit",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.0.4"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongodb": "^3.0.4",
+    "mongoose": "^4.5.9"
   }
 }
