--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": " mocha server/**/*.tests.js",
+    "test-watch": "nodemon --exec 'npm test' "
   },
   "author": "Ankit",
   "license": "ISC",
@@ -13,5 +14,12 @@
     "express": "^4.14.0",
     "mongodb": "^3.0.4",
     "mongoose": "^4.5.9"
+    
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "supertest": "^2.0.0",
+    "nodemon": "^1.10.2",
+    "mocha": "^3.0.2"
   }
 }
